# NetworksLab2017

./: .gitignore  CMakeLists.txt  NetworksLab2017.cbp  README.md
LDAP/: CMakeLists.txt
LDAP/Report/: report.tex
LDAP/tcp_template/client_linux/: CMakeLists.txt  main.c
LDAP/tcp_template/client_win/: CMakeLists.txt  main.c
LDAP/tcp_template/server_linux/: CMakeLists.txt  main.c  server.c  server.h  server_linux
LDAP/tcp_template/server_win/: CMakeLists.txt  connectinohandler.c  main.c  server.c  server.h
tcp_template/client_linux/: main.c
tcp_template/server_linux/: main.c
udp_template/client_linux/: CMakeLists.txt  client_linux  main.c
udp_template/server_linux/: CMakeLists.txt  main.c
